--- a/public/css/client.css
+++ b/public/css/client.css
@@ -124,26 +124,25 @@ p {
   margin-bottom: 1em; }
 
 h1 {
-  font-size: 5em;
+  font-size: 4em;
   line-height: 1;
   margin-top: 0.6em;
   margin-bottom: 0.4em; }
   @media (max-width: 1199px) {
     h1 {
-      font-size: 4em; } }
+      font-size: 3.2em; } }
   @media (max-width: 991px) {
     h1 {
-      font-size: 3.5em; } }
+      font-size: 2.8em; } }
   @media (max-width: 767px) {
     h1 {
-      font-size: 3em; } }
+      font-size: 2.4em; } }
 
 h2 {
   font-size: 3em;
   line-height: 1;
   margin-top: 0.6em;
-  margin-bottom: 0.4em;
-  text-shadow: 1px 1px 0px #fff, 0px 0px 8px material-color("grey", "300"); }
+  margin-bottom: 0.4em; }
   @media (max-width: 1199px) {
     h2 {
       font-size: 2.4em; } }
