--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -11,7 +11,7 @@
                     <a href="/guides">Guides</a>
                 </li>
                 <li>
-                    <a href="/docs">Documentation</a>
+                    <a href="/docs/hashbrown">Documentation</a>
                 </li>
                 <li>
                     <a href="/features">Features</a>
