--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -11,7 +11,10 @@
                     <a href="/guides">Guides</a>
                 </li>
                 <li>
-                    <a href="/docs/hashbrown">Documentation</a>
+                    <a href="/docs/api">API docs</a>
+                </li>
+                <li>
+                    <a href="/docs/hashbrown">Internal docs</a>
                 </li>
                 <li>
                     <a href="/features">Features</a>
